<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottomsheet.AddTransactionBottomSheetDialogFragment">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_close_24"
            android:id="@+id/imageClose"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black_text"
            android:text="@string/add_data"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B3B3B3"
            android:layout_marginVertical="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/vehicle_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputVehicleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:maxLength="9"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="16dp"
            android:textColor="@color/gray_text"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/vehicle_type_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVehicleType1"/>

            <RadioButton
                android:text="@string/vehicle_type_bike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVehicleType2"/>

            <RadioButton
                android:text="@string/vehicle_type_truck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVehicleType3"/>

            <RadioButton
                android:text="@string/vehicle_type_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVehicleType4"/>

        </RadioGroup>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTint="@color/redSecondary"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:textAllCaps="false"
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/add"/>

    </LinearLayout>

</FrameLayout>