<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.OutParkingActivity">

        <LinearLayout
            android:id="@+id/linearInquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_arrow_back_24"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/search"
                android:textColor="@color/black_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/search_subtitle"
                android:textColor="@color/gray_text"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/vehicle_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputVehicleNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:maxLength="9"
                    android:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressInquiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/redSecondary"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonInquiry"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/search"
                android:textAllCaps="false"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linearPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearInquiry">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:gravity="center|start"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:id="@+id/textCheckIn"
                    android:gravity="center|end"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:gravity="center|start"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_out_time"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:id="@+id/textCheckOut"
                    android:gravity="center|end"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:gravity="center|start"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:id="@+id/textDuration"
                    android:gravity="center|end"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:gravity="center|start"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/base_price"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:id="@+id/textBasePrice"
                    android:gravity="center|end"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <TextView
                    android:gravity="center|start"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total_billing"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/textTotalBill"
                    android:gravity="center|end"
                    android:includeFontPadding="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_time"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black_text"/>

            <RadioGroup
                android:paddingHorizontal="16dp"
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/payment_method_cash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbPaymentMethod1"/>

                <RadioButton
                    android:text="@string/payment_method_qris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbPaymentMethod2"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/buttonCancel"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/gray_text"
                    android:textAllCaps="false"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/buttonPay"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/pay"
                    android:textAllCaps="false"
                    app:cornerRadius="8dp" />
            </LinearLayout>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressPayment"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/redSecondary"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
